# ARGOS_Proof_of_Concept

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
docs/: Architecture.md  ArchitectureWithOutCoPilotKitandTavily.md  DSPy_Gemini_Integration_Guide.md  copilotkit_adk_reintegration_plan.md  copilotkit_adk_reintegration_plan_updated_status.md  deployment_guide.md  dspy_redis_streaming_agents_plan.md  frontend_and_server_prompt.md  missingcodinglogicfromprompts1and2.md  scaled_down_ideas_claude.md  scaled_down_ideas_gemini.md  technical_plan_poc5.md
docs/planning/: scaled_down_ideas_claude.md  technical_plan_poc.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: AgentStatus.jsx  AgentStatus.tsx  App.jsx  App.tsx  Dashboard.jsx  PaperVisualizer.jsx  VoiceInterface.jsx  VoiceInterface.tsx  types.ts
scripts/: create_vpc_connector.sh  verify_endpoints.py
src/: config.py  debug.py  main.py  mcp_client.py  multi_modal_tools.py  paper_parser.py  redis_client.py  schemas.py  voice_handler.py
src/agents/: analysis.py  coordinator.py  planning.py  research.py
src/agents/analysis/: agent.py
src/mocks/: tavily_mock.py
src/scripts/: run_adk_decompose.py
tests/: mocks.py  test_analysis.py  test_config_project_id.py  test_coordinator.py  test_main_live.py  test_multi_modal_tools.py  test_planning.py  test_research.py  test_voice_handler.py
tests/docs/: adk_live_test_plan.md  analysis_test_plan.md  test_plan.md
(+24 files in other folders)
